--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <button class="action-btn" onclick="document.getElementById('fileIn').click()">上传图片</button>
         <input type="file" id="fileIn" hidden accept="image/*" onchange="loadBg(this)">
         <button class="action-btn" onclick="resetBg()" style="background:none; border-style:dashed">还原默认</button>
+        <div class="section-title">更多信息</div>
+        <a href="about.html" class="action-btn" style="text-decoration: none; display: block; text-align: center;">移动端</a>
+
     </div>
 </div>
 
